# vgmusic.py

./: .flake8  .gitignore  API.md  LICENSE  README.md  create_docs.sh  exceptions.py  index.json  pyproject.toml  vgmusic.py
docs/source/: conf.py  index.rst  modules.rst  vgmusic.rst
tests/: test_filter.py
vgmusic/: __init__.py  cli.py  public.py  rest.py  utils.py  vgmusic.py
vgmusic.bak/: rest.py
